discussion/kv_engine/150013/150013_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-45221: 4/n Use FlushAccounting during replay 'copy'

Three aims of this commit:

1) Re-use the FlushAccounting code for tracking collection
disk size during compaction catch-up. This means there is
one place where we can see the logic for size/item tracking.

2) Remove the preload of *all* collections by utilising
local document copying in the replay.

3) Remove code which detected drop collections in the copy,
the FlushAccounting object does this when it is given the
dropped collections of the replay chunk.

Change-Id: Ic96f3e4c564277ea3b3d602310924b6ba950c35f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-03-31 08:38:58.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-03-31 09:16:35.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29744/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:45:10:
fatal error: "charconv" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29744/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34664/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\couch-kvstore\couch-kvstore.cc(210): error C2665: "std::from_chars": none of the 14 overloads could convert all the argument types ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34664/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8018/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:45:10: error: "charconv" file not found [clang-diagnostic-error]
#include <charconv>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8018/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:45:10:
error: "charconv" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8018/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9603/ : FAILURE

Compile error at [2021-03-31T08:56:27.267Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:45:10:
fatal error: charconv: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9603/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9739/ : FAILURE

Compile error at [2021-03-31T09:00:06.235Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:45:10:
fatal error: charconv: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9739/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9964/ : FAILURE

Compile error at [2021-03-31T09:07:47.528Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:45:10:
fatal error: "charconv" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9964/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17512/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/6562/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8668/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
